Moved the content to the center, it's not aligned correctly tho

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -8,6 +8,13 @@ body {
   display: flex;
 }
 
+.content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 ul{
   list-style-type: none;
 }
